Add About & updated footer

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,7 +5,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>{{name}}</p>
+            <p>This site was created by <b>{{name}}</b>. It uses data from Mapbox.com and Darksky.net!</p>
             <img class="portrait" src="img/Cristian-avatar.png">
         </div>
         {{>footer}}
