--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-    <p>Created by {{website}}</p>
+    <p>Created by <a href="https://www.madgeniusblink.com">{{website}}</a></p>
 </footer>
